--- a/docs/elisp/1.1 Caveats.md
+++ b/docs/elisp/1.1 Caveats.md
@@ -1,11 +1,11 @@
 ---
-slug: Caveats
+slug: 주의사항
 ---
 
-This manual has gone through numerous drafts. It is nearly complete but not flawless. There are a few topics that are not covered, either because we consider them secondary (such as most of the individual modes) or because they are yet to be written. Because we are not able to deal with them completely, we have left out several parts intentionally.
+이 매뉴얼은 수많은 초안을 거쳤습니다. 거의 완성되었지만 완벽하지는 않습니다. 대부분의 개별 모드와 같이 부차적이라고 생각하거나 아직 작성되지 않았기 때문에 다루지 않은 몇 가지 주제가 있습니다. 모든 주제를 완벽하게 다룰 수 없기 때문에 의도적으로 몇 가지 부분을 생략했습니다.
 
-The manual should be fully correct in what it does cover, and it is therefore open to criticism on anything it says—from specific examples and descriptive text, to the ordering of chapters and sections. If something is confusing, or you find that you have to look at the sources or experiment to learn something not covered in the manual, then perhaps the manual should be fixed. Please let us know.
+매뉴얼은 다루는 내용이 완전히 정확해야 하므로 구체적인 예시와 설명 텍스트, 장과 섹션의 순서 등 모든 내용에 대해 비판을 받을 수 있습니다. 혼란스러운 부분이 있거나 매뉴얼에서 다루지 않은 내용을 배우기 위해 출처를 찾거나 실험을 해야 하는 경우 매뉴얼을 수정해야 할 수도 있습니다. 그런 경우 알려주세요.
 
-As you use this manual, we ask that you send corrections as soon as you find them. If you think of a simple, real life example for a function or group of functions, please make an effort to write it up and send it in. Please reference any comments to the node name and function or variable name, as appropriate. Also state the number of the edition you are criticizing.
+이 매뉴얼을 사용하면서 수정 사항을 발견하면 즉시 보내주시기 바랍니다. 함수나 함수 그룹에 대한 간단한 실생활 예제를 생각하신다면, 이를 작성하여 보내주시기 바랍니다. 노드 이름과 함수 또는 변수 이름에 대한 코멘트를 적절히 참조해 주세요. 또한 비판하는 에디션의 번호도 명시해 주세요.
 
-Please send comments and corrections using `M-x report-emacs-bug`.
+다음 명령을 사용하여 의견 및 수정 사항을 보내주세요 `M-x report-emacs-bug`.
